Fix vertical alignment on home stats

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -630,13 +630,13 @@ nav
       margin-bottom: 0
       background: none
       td
+        height: 65px
+        vertical-align: middle
         padding: 0
         &:nth-child(1)
           padding-right: 8px
           border-right: 1px solid $accent
           width: 40%
-          height: 65px
-          // find a better way to do this ^
         &:nth-child(2)
           padding-left: 3px
         @media #{$medium-up}
@@ -651,6 +651,7 @@ nav
         font-size: 28px
         margin: 0
       h6
+        margin: 0
         margin-top: -4px
     .caption
       text-align: right
